# ProjetoFinal_Embarcatech

./: CMakeLists.txt  README.md
inc/: buzzer.h  display.h  led_matrix.h
src/: ProjetoFinal_Embarcatech.c  buzzer.c  display.c  led_matrix.c
